se agrego imagen

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <p>Como ya hiciste fork a mi repositorio, sigue las siguientes intrucciones:</p>
   <ul>
     <li>En este archivo coloca la imágen que esta en la carpeta img (si quieres puedes ajustar el tamaño de la imagen)</li>
+    <img src="/Users/Gohu/Documents/Make_It_Real 1-2019/firstGit/pruebaFork/img/iconos-de-la-programacion.jpg" alt="">
     <li>Haz commit</li>
     <li>Crea un Archivo style.css (en su respectiva carpeta css) y pon un background-color de tu preferencia</li>
     <li>Haz Commit</li>
