agregue mis datos

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="style/style.css">
   <title>Document</title>
 </head>
 <body>
@@ -23,6 +24,9 @@
     <li>Luego une tus cambios de esta rama a la rama master</li>
     <li>Borra la rama mis-datos cuando estes seguro que master tiene todo tu trabajo (sino sabes como hacerlo busca en San Google)</li>  
     <li>Súbelo a tu repositorio</li>
+    <li>hugo</li>
+    <li>espinosa</li>
+    <li>will</li>
   </ul>
     <h2>HAPPY CODING!</h2>
 </body>
