agregue imagen inspiradora

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <li>hugo</li>
     <li>espinosa</li>
     <li>will</li>
+    <img src="/Users/Gohu/Documents/Make_It_Real 1-2019/firstGit/pruebaFork/img/iconos-de-la-programacion.jpg" alt="">
   </ul>
     <h2>HAPPY CODING!</h2>
 </body>
